tests/shell/fail/exitcode.ish
echo before
exit 7
echo after
